--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">    
+    <meta name="description" content="Regime Type Web Mapping">
+    <meta name="keywords" content="HTML,CSS,JavaScript,ESRI">
+    <meta name="author" content="Giovanni Zambotti">    
 
     <title>Regime Type Map</title>
 
@@ -85,8 +86,8 @@
                   <form id="geocluster-form">
                     <div class="form-group">                      
                       <select id="dropDownClusterNumber" class="selectpicker" data-width="auto"></select>
-                      <select id="dropDownClusterVar" class="selectpicker" data-width="auto" multiple title='Choose Dimensions...' data-selected-text-format="count>3"></select>
-                      <select id="dropDownCountry" class="selectpicker" data-size="5" data-width="auto" multiple title='Choose All Countries' data-selected-text-format="count>5">
+                      <select id="dropDownClusterVar" class="selectpicker" data-width="auto" multiple title='Choose Dimensions...' data-selected-text-format="count>3" disabled></select>
+                      <select id="dropDownCountry" class="selectpicker" data-size="5" data-width="auto" multiple title='Choose All Countries' data-selected-text-format="count>5" disabled>
                         <optgroup label="Continent">                          
                           <option>Asia</option>
                           <option>Europe</option>
