--- a/index.html
+++ b/index.html
@@ -145,9 +145,10 @@
                       </select>
                       <br>
                       <!--<button class="btn ex-enable"><i class="glyphicon glyphicon-ok"></i> Select All</button>-->
-                      <button class="btn ex-disable"><i class="glyphicon glyphicon-remove"></i> Deselect All</button>
+                      <button type="button" class="btn ex-disable"><i class="glyphicon glyphicon-remove"></i> Deselect All Countries</button>
+                      <button type="button" id="btnGeoCluster" class="btn btn-success" data-dismiss="modal" disabled> Go </button>
                     </div> 
-                    <button id="btnGeoCluster" type="button" class="btn btn-success" data-dismiss="modal"> Go </button>                    
+                                        
                   </form>
                 </div>
             </div><!-- /.modal-content -->
